# authority-drift-training

./: CLAUDE.md  audit.md  feynman_oversight_results.md  pyproject.toml  training-log.md
.github/workflows/: ci.yml
outputs/: lit-review-stpa-human-ai-oversight.md
src/authority_drift_training/: __init__.py  api_requester.py
tests/: test_api_requester.py
